Renaming skipIfMissingFileOrThrow; better error message when ImageIOPlanePyramidSource process directory instead of file